--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@vercel/analytics": "^1.2.2",
     "emailjs": "^4.0.2",
     "eslint-config-next": "^14.1.0",
     "framer-motion": "^10.13.0",
