--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "emailjs": "^4.0.2",
     "eslint-config-next": "^14.1.0",
     "framer-motion": "^10.13.0",
