- Updated Node.js version to 22.x instead of 18.x and also created vercel.json file - Updated Clients

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@next/third-parties": "^14.2.1",
