--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ],
-  "build": {
-    "env": {
-      "NODE_VERSION": "22.x"
-    }
-  },
-  "nodeVersion": "22.x"
+  "version": 2
 }
